appId: ${MAESTRO_APP_ID}
---
- tapOn:
    id: "home_screen-settings"
- tapOn: "Supprimer cet appareil"
- takeScreenshot: build/maestro/900-SignOutScreen
- back
- tapOn: "Supprimer cet appareil"
# Ensure cancel cancels
- tapOn:
    id: "dialog-negative"
- tapOn: "Supprimer cet appareil"
- tapOn:
    id: "dialog-positive"
- runFlow: ../assertions/assertInitDisplayed.yaml
