appId: ${MAESTRO_APP_ID}
---
- takeScreenshot: build/maestro/150-Verify
- tapOn:
    id: "verification-recovery_key"
- inputText: ${MAESTRO_RECOVERY_KEY}
- hideKeyboard
- tapOn: "Continuer"
- retry:
    maxRetries: 3
    commands:
      - extendedWaitUntil:
          visible: "Appareil vérifié"
          timeout: 30000
- tapOn: "Terminé"
