appId: ${MAESTRO_APP_ID}
---
# Purpose: Test the creation and deletion of a DM room.
- tapOn: "Créer un salon"
- tapOn: "Rechercher quelqu’un"
- inputText: ${MAESTRO_INVITEE1_MXID}
- hideKeyboard
- tapOn:
    text: ${MAESTRO_INVITEE1_MXID}
    index: 1
- runFlow:
    when:
      visible: "Entamer une conversation avec ce nouveau contact ?"
    commands:
      - tapOn: "Continuer"
- runFlow:
    when:
      visible: "Envoyer l’invitation ?"
    commands:
      - tapOn: "Envoyer l’invitation"
- takeScreenshot: build/maestro/330-createAndDeleteDM
- tapOn: ${MAESTRO_INVITEE1_MXID}
- scroll
- tapOn: "Quitter le salon"
- tapOn: "Quitter"
- runFlow:
    when:
      visible: "You need an invite in order to join"
    commands:
      - tapOn: "Retour"
