appId: ${MAESTRO_APP_ID}
---
# Purpose: Test the creation and deletion of a room
- tapOn: "Créer un salon"
- tapOn: "Nouveau salon"
- tapOn: "Ajouter un nom…"
- inputText: "aRoomName"
- tapOn: "Ajouter une description…"
- inputText: "aRoomTopic"
- tapOn: "Créer"
- takeScreenshot: build/maestro/320-createAndDeleteRoom
- tapOn: "Rechercher quelqu’un"
- inputText: ${MAESTRO_INVITEE1_MXID}
- tapOn:
    text: ${MAESTRO_INVITEE1_MXID}
    index: 1
- tapOn: "Terminer"
- assertVisible: "Invitation d’une personne externe au secteur public"
- tapOn:
    id: "dialog-positive"
- runFlow:
    when:
      visible: "Inviter un nouveau contact dans ce salon ?"
    commands:
      - tapOn:
          id: "confirm_invite_unknown"
- assertVisible: "CHIFFRÉ"
- assertVisible: "EXTERNES"
- tapOn: "aRoomName"
- assertVisible: "CHIFFRÉ"
- assertVisible: "EXTERNES"
- scrollUntilVisible:
    direction: DOWN
    element:
      text: "Membres"
- tapOn: "Membres"
- assertVisible: "1 Invité(e)"
- assertVisible: "1 Membre"
- tapOn: "Inviter"
# assert there's 1 member and 1 invitee
- tapOn: "Rechercher quelqu’un"
- inputText: ${MAESTRO_INVITEE2_MXID}
- tapOn: "Raphaël Chevallier [Tchap - LaSuite]"
# Hide keyboard by tapping on an external element in case it's displayed, otherwise it will 'eat' the back button press
- tapOn:
    # Navigation title
    text: "Inviter des membres"
- tapOn: "Inviter"
- runFlow:
    when:
      visible: "Inviter un nouveau contact dans ce salon ?"
    commands:
      - tapOn:
          id: "confirm_invite_unknown"
- assertVisible: "2 Invité(e)s"
- assertVisible: "1 Membre"
- tapOn: "Retour"
- scroll
- scroll
- tapOn: "Quitter le salon"
- tapOn: "Quitter"
- runFlow:
    when:
      visible: "You need an invite in order to join"
    commands:
      - tapOn: "Retour"
