appId: ${MAESTRO_APP_ID}
---
# Purpose: Test the context menu of a room in the room list
- longPressOn: ${MAESTRO_ROOM_NAME}
- takeScreenshot: build/maestro/310-RoomList-ContextMenu
- tapOn:
    text: "Paramètres"
    index: 0
- tapOn: "Retour"
- longPressOn: ${MAESTRO_ROOM_NAME}
- tapOn:
    text: "Quitter le salon"
    index: 0
- tapOn: "Annuler"
