appId: ${MAESTRO_APP_ID}
---
- runFlow: ../assertions/assertRoomListSynced.yaml
- tapOn: "Rechercher"
- inputText: ${MAESTRO_ROOM_NAME.substring(0, 3)}
- takeScreenshot: build/maestro/400-SearchRoom
- tapOn: ${MAESTRO_ROOM_NAME}
# Back from timeline to search
- back
- extendedWaitUntil:
    visible: ${MAESTRO_ROOM_NAME.substring(0, 3)}
    timeout: 10000
# Back to close the keyboard
- back
- waitForAnimationToEnd
# Back to close the home screen
- runFlow:
    when:
      visible: ${MAESTRO_ROOM_NAME.substring(0, 3)}
    commands:
      - back
- runFlow: ../assertions/assertHomeDisplayed.yaml