appId: ${MAESTRO_APP_ID}
---
- takeScreenshot: build/maestro/530-Timeline
- tapOn: "Ajouter une pièce jointe"
- tapOn: "Sondage"
- tapOn: "Quel est le sujet du sondage ?"
- inputText: "I am a poll"
- tapOn: "Option 1"
- inputText: "Answer 1"
- tapOn: "Option 2"
- inputText: "Answer 2"
- tapOn: "Créer"
- takeScreenshot: build/maestro/531-Timeline
