appId: ${MAESTRO_APP_ID}
---
- tapOn:
    id: "home_screen-settings"
- assertVisible: "Paramètres"
- takeScreenshot: build/maestro/600-Settings

- assertVisible: "Gérer le compte et les appareils"

- tapOn:
    text: "Notifications"
- assertVisible: "Activer les notifications sur cet appareil"
- back

- tapOn:
    text: "Verrouillage d’écran"
- assertVisible: "Choisissez un code PIN"
- hideKeyboard
- back

- tapOn:
    text: "Chiffrement"
- assertVisible: "Autoriser la sauvegarde automatique des messages"
- back

- tapOn:
    text: "Paramètres avancés"
- assertVisible: "Afficher la source"
- back

- tapOn:
    text: "Foire Aux Questions"
- assertVisible: "Comment pouvons-nous vous aider ?"
- back

- tapOn:
    text: "Mentions légales"
- assertVisible: "Droits d’auteur"
- assertVisible: "Conditions Générales d'Utilisation"
- assertVisible: "Politique de confidentialité"
- assertVisible: "Licences open source"
- back

- tapOn:
    text: "Remonter un problème"
- assertVisible: "Remonter un problème"
- back

- tapOn:
    text: "Statistiques d’utilisation"
- assertVisible: "Partagez des données de statistiques d’utilisation"
- back

- back
- runFlow: ../assertions/assertHomeDisplayed.yaml
